--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="coordonnees">Coordonnees entreprise :</string>
     <string name="tel_contact">Numéro de téléphone :</string>
     <string name="valider">Valider</string>
+    <string name="obtenircoordonnees">Obtenir mes coordonnées</string>
     <string name="adresseClient">Adresse :</string>
     <string name="retour">Retour</string>
     <string name="indication_entreprise">Veuillez entrer le nom de l\'entreprise</string>
