--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,28 @@
     <string name="inscription_reussie">Inscription réussie ! Bienvenu !</string>
     <string name="menu_deconnecter">Se déconnecter</string>
     <string name="menu_compte">Gérer mon compte</string>
+
+
+    <string name="ajouter_client">Ajouter un client/prospect</string>
+    <string name="detail_client">Detail</string>
+    <string name="entreprise">Nom de l\'entreprise : </string>
+    <string name="adresse_client">Adresse du client :</string>
+    <string name="description">Description :</string>
+    <string name="nom_contact">Nom du contact :</string>
+    <string name="prenom_contact">Prenom du contact :</string>
+    <string name="coordonnees">Coordonnees entreprise :</string>
+    <string name="tel_contact">Numéro de téléphone :</string>
+    <string name="valider">Valider</string>
+    <string name="obtenircoordonnees">Obtenir mes coordonnées</string>
+    <string name="adresseClient">Adresse :</string>
+    <string name="retour">Retour</string>
+    <string name="indication_entreprise">Veuillez entrer le nom de l\'entreprise</string>
+    <string name="indication_adresse_entreprise">Veuillez entrer l\'adresse de l\'entreprise</string>
+    <string name="indication_prenom_contact">Veuillez entrer le prénom de votre contact</string>
+    <string name="indication_nom_contact">Veuillez entrer le nom de votre contact</string>
+    <string name="indication_description">Renseigner votre description ...</string>
+    <string name="indication_telephone">Veuillez entrer le numéros de téléphone</string>
+    <string name="indication_coordonnees">longitude:latitude</string>
+    <string name="client">Client</string>
+    <string name="prospect">Prospect</string>
 </resources>
