--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="se_souvenir">Se souvenir de moi</string>
     <string name="bouton_insription">Créer le compte</string>
     <string name="erreur_champ_connexion_vide">Nom d\'utilisateur ou mot de passe vide</string>
-    <string name="erreur_reseau">Aucune connexion internet detecté </string>
+    <string name="erreur_reseau">Aucune connexion internet detectée </string>
     <string name="api_injoignable">API injoignable</string>
     <string name="erreur_inscription">Erreur lors de l\'inscription , veuillez reessayer plus tard</string>
     <string name="attente_connexion">Connexion en cours ...</string>
