--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,32 +10,32 @@
     <string name="ville">Ville</string>
     <string name="indication_nom">Entrez votre nom</string>
     <string name="indication_prenom">Entrez votre prénom</string>
-    <string name="indication_email">Entrez votre mail</string>
+    <string name="indication_email">Entrez votre adresse email</string>
     <string name="indication_mdp">Entrez votre mot de passe</string>
     <string name="indication_adresse">Entrez votre adresse</string>
     <string name="indication_ville">Entrez votre ville</string>
     <string name="se_souvenir">Se souvenir de moi</string>
     <string name="bouton_insription">Créer le compte</string>
-    <string name="erreur_champ_connexion_vide">Nom d\'utilisateur ou mot de passe vide</string>
+    <string name="erreur_champ_connexion_vide">Nom d\'utilisateur ou mot de passe non renseigné</string>
     <string name="erreur_reseau">Aucune connexion internet detectée</string>
-    <string name="api_injoignable">API injoignable</string>
-    <string name="erreur_inscription">Erreur lors de l\'inscription , veuillez reessayer plus tard</string>
+    <string name="api_injoignable">L\'API n\'est pas joignable, veuillez réessayer plus tard</string>
+    <string name="erreur_inscription">Erreur lors de l\'inscription , veuillez réessayer plus tard</string>
     <string name="attente_reseau">Vérification en cours du réseau ...</string>
     <string name="attente_connexion">Connexion en cours ...</string>
     <string name="attente_inscription">Inscription en cours ...</string>
-    <string name="inscription_reussie">Inscription réussie ! Bienvenu !</string>
+    <string name="inscription_reussie">Inscription réussie, bienvenue !</string>
     <string name="menu_deconnecter">Se déconnecter</string>
     <string name="menu_compte">Gérer mon compte</string>
 
 
-    <string name="ajouter_client">Ajouter un client/prospect</string>
-    <string name="detail_client">Detail</string>
+    <string name="ajouter_client">Ajouter un client / prospect</string>
+    <string name="detail_client">Détails du client</string>
     <string name="entreprise">Nom de l\'entreprise :</string>
     <string name="adresse_client">Adresse du client :</string>
     <string name="description">Description :</string>
     <string name="nom_contact">Nom du contact :</string>
-    <string name="prenom_contact">Prenom du contact :</string>
-    <string name="coordonnees">Coordonnees entreprise :</string>
+    <string name="prenom_contact">Prénom du contact :</string>
+    <string name="coordonnees">Coordonnées entreprise :</string>
     <string name="tel_contact">Numéro de téléphone :</string>
     <string name="valider">Valider</string>
     <string name="obtenircoordonnees">Obtenir mes coordonnées</string>
