--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,11 @@
     <string name="indication_ville">Entrez votre ville</string>
     <string name="se_souvenir">Se souvenir de moi</string>
     <string name="bouton_insription">Créer le compte</string>
+
     <string name="erreur_champ_connexion_vide">Nom d\'utilisateur ou mot de passe non renseigné</string>
-    <string name="erreur_reseau">Aucune connexion internet detectée</string>
+    <string name="erreur_reseau">Aucune connexion internet détectée</string>
     <string name="api_injoignable">L\'API n\'est pas joignable, veuillez réessayer plus tard</string>
+    <string name="erreur_inconnue">Une erreur inconnue est survenue, veuillez réessayer</string>
     <string name="erreur_inscription">Erreur lors de l\'inscription , veuillez réessayer plus tard</string>
     <string name="attente_reseau">Vérification en cours du réseau ...</string>
     <string name="attente_connexion">Connexion en cours ...</string>
