--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="indication_coordonnees">longitude:latitude</string>
     <string name="client">Client</string>
     <string name="prospect">Prospect</string>
+    <string name="pasModifier">Aucune informations n\'a était modifié</string>
 </resources>
