--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="menu_deconnecter">Se déconnecter</string>
     <string name="menu_compte">Gérer mon compte</string>
 
+    <string name="valider">Valider</string>
+    <string name="retour">Retour</string>
 
     <string name="ajouter_client">Ajouter un client / prospect</string>
     <string name="detail_client">Détails du client</string>
@@ -39,11 +41,10 @@
     <string name="prenom_contact">Prénom du contact :</string>
     <string name="coordonnees">Coordonnées entreprise :</string>
     <string name="tel_contact">Numéro de téléphone :</string>
-    <string name="valider">Valider</string>
     <string name="obtenircoordonnees">Obtenir mes coordonnées</string>
     <string name="coordonnees_non_calculees">Veuillez d\'abord obtenir vos coordonnées</string>
     <string name="adresseClient">Adresse :</string>
-    <string name="retour">Retour</string>
+
     <string name="indication_entreprise">Veuillez entrer le nom de l\'entreprise</string>
     <string name="indication_adresse_entreprise">Veuillez entrer l\'adresse de l\'entreprise</string>
     <string name="indication_prenom_contact">Veuillez entrer le prénom de votre contact</string>
@@ -53,4 +54,6 @@
     <string name="indication_coordonnees">longitude:latitude</string>
     <string name="client">Client</string>
     <string name="prospect">Prospect</string>
+
+    <string name="ajouter_itineraire">Ajouter un itinéraire</string>
 </resources>
