feat: (Classes des itinéraires)
Classes pour le fonctionnement des itinéraires (UI et Back)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="client">Client</string>
     <string name="prospect">Prospect</string>
 
+    <string name="nom_itineraire">Nom :</string>
+    <string name="liste_clients_itineraire">Étapes de l\'itinéraire :</string>
     <string name="ajouter_itineraire">Ajouter un itinéraire</string>
 </resources>
