--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="indication_mdp">Entrez votre mot de passe</string>
     <string name="indication_adresse">Entrez votre adresse</string>
     <string name="se_souvenir">Se souvenir de moi</string>
-    <string name="erreur_champ_connexion_vide">Nom d\'utilisateur ou mot de passe non renseigné</string>
+    <string name="erreur_mail_non_renseigne">Adresse email non renseignée</string>
+    <string name="erreur_mdp_non_renseigne">Mot de passe non renseigné</string>
     <string name="erreur_reseau">Aucune connexion internet détectée</string>
     <string name="api_injoignable">L\'API n\'est pas joignable, veuillez réessayer plus tard</string>
 
