--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="inscription_reussie">Inscription réussie, bienvenue !</string>
     <string name="menu_deconnecter">Se déconnecter</string>
     <string name="menu_compte">Gérer mon compte</string>
+    <string name="recherche_adresse_erreur">Erreur lors de la recherche de l\'adresse</string>
 
 
     <string name="ajouter_client">Ajouter un client / prospect</string>
@@ -40,7 +41,7 @@
     <string name="coordonnees">Coordonnées entreprise :</string>
     <string name="tel_contact">Numéro de téléphone :</string>
     <string name="valider">Valider</string>
-    <string name="obtenircoordonnees">Obtenir mes coordonnées</string>
+    <string name="obtenircoordonnees">Calculer les coordonnées</string>
     <string name="coordonnees_non_calculees">Veuillez d\'abord obtenir vos coordonnées</string>
     <string name="adresseClient">Adresse :</string>
     <string name="retour">Retour</string>
@@ -53,4 +54,10 @@
     <string name="indication_coordonnees">longitude:latitude</string>
     <string name="client">Client</string>
     <string name="prospect">Prospect</string>
+
+    <string name="marqueur_confirmation">Oui</string>
+    <string name="marqueur_annulation">Non</string>
+    <string name="marqueur_message">Voulez-vous vraiment supprimer ce marqueur ?</string>
+    <string name="marqueur_titre">Supprimer le marqueur</string>
+    <string name="recherche_adresse_aucun_resultat">Aucun résultat trouvé, vérifiez la saisie et réessayer.</string>
 </resources>
