--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="indication_prenom">Entrez votre prénom</string>
     <string name="indication_email">Entrez votre adresse email</string>
     <string name="indication_mdp">Entrez votre mot de passe</string>
-    <string name="indication_adresse">Entrez votre adresse</string>
+    <string name="indication_adresse">Adresse non renseignée ></string>
     <string name="se_souvenir">Se souvenir de moi</string>
     <string name="erreur_mail_non_renseigne">Adresse email non renseignée</string>
     <string name="erreur_mdp_non_renseigne">Mot de passe non renseigné</string>
@@ -19,14 +19,13 @@
     <string name="api_injoignable">L\'API n\'est pas joignable, veuillez réessayer plus tard</string>
 
     <string name="inscription">Inscription</string>
-    <string name="editer_adresse">Editer mon adresse</string>
-    <string name="erreur_adresse_vide">Veuillez entrer une adresse</string>
     <string name="adresse_non_trouvee">Adresse introuvable, veuillez vérifier l\'entrée</string>
     <string name="adresse_hors_france">L\'adresse renseignée est introuvable en France</string>
     <string name="titre_choix_adresse">Choisissez votre adresse</string>
     <string name="attente_reseau">Vérification en cours du réseau ...</string>
     <string name="attente_connexion">Connexion en cours ...</string>
     <string name="attente_inscription">Inscription en cours ...</string>
+    <string name="attente_chargement">Modification(s) en cours ...</string>
     <string name="inscription_reussie">Inscription réussie, bienvenue !</string>
     <string name="menu_deconnecter">Se déconnecter</string>
     <string name="menu_compte">Gérer mon compte</string>
@@ -34,29 +33,28 @@
     <string name="erreur_inscription">Erreur lors de l\'inscription, veuillez réessayer plus tard</string>
 
     <string name="ajouter_client">Ajouter un client / prospect</string>
-    <string name="detail_client">Détails du client</string>
-    <string name="entreprise">Nom de l\'entreprise :</string>
-    <string name="adresse_client">Adresse du client :</string>
-    <string name="description">Description :</string>
-    <string name="nom_contact">Nom du contact :</string>
-    <string name="prenom_contact">Prénom du contact :</string>
-    <string name="coordonnees">Coordonnées entreprise :</string>
-    <string name="tel_contact">Numéro de téléphone :</string>
+    <string name="detail_client">Détails du client / prospect</string>
+    <string name="nom_entreprise">Nom de l\'entreprise</string>
+    <string name="nom_entreprise_liste">Nom de l\'entreprise :</string>
+    <string name="adresse_entreprise">Adresse de l\'entreprise</string>
+    <string name="adresse_entreprise_liste">Adresse de l\'entreprise :</string>
+    <string name="description">Description</string>
+    <string name="nom_contact">Nom du contact</string>
+    <string name="prenom_contact">Prénom du contact</string>
+    <string name="tel_contact">Numéro de téléphone</string>
     <string name="valider">Valider</string>
-    <string name="obtenir_coordonnees">Calculer les coordonnées</string>
+    <string name="obtenir_coordonnees">Obtenir votre adresse</string>
     <string name="coordonnees_non_calculees">Veuillez d\'abord obtenir vos coordonnées</string>
-    <string name="adresseClient">Adresse :</string>
     <string name="retour">Retour</string>
-    <string name="indication_entreprise">Veuillez entrer le nom de l\'entreprise</string>
-    <string name="indication_adresse_entreprise">Veuillez entrer l\'adresse de l\'entreprise</string>
-    <string name="indication_prenom_contact">Veuillez entrer le prénom de votre contact</string>
-    <string name="indication_nom_contact">Veuillez entrer le nom de votre contact</string>
-    <string name="indication_description">Renseigner votre description ...</string>
-    <string name="indication_telephone">Veuillez entrer le numéros de téléphone</string>
-    <string name="indication_coordonnees">longitude:latitude</string>
+    <string name="indication_entreprise">Entrez le nom de l\'entreprise</string>
+    <string name="indication_prenom_contact">Entrez le prénom de votre contact</string>
+    <string name="indication_nom_contact">Entrez le nom de votre contact</string>
+    <string name="indication_description">Renseignez une description (optionnel)</string>
+    <string name="indication_telephone">Ex. : +33612345678</string>
     <string name="client">Client</string>
     <string name="prospect">Prospect</string>
-    <string name="pasModifier">Aucune information n\'a été modifiée</string>
+    <string name="pasModifie">Aucune information n\'a été modifiée</string>
+    <string name="erreur_modification_client">Erreur lors de l\'édition d\'un client \/ prospect, veuillez réessayer plus tard</string>
 
     <string name="marqueur_confirmation">Oui</string>
     <string name="marqueur_annulation">Non</string>
